updated style file to set bacground image and remove see_txt width => fixing overflow text in button as reviewed

--- a/styles/style.css
+++ b/styles/style.css
@@ -330,7 +330,6 @@
 
     /* See project */
 
-    width: 98px;
     height: 24px;
 
     /* Theme 2 / Button Normal */
@@ -369,20 +368,23 @@
     position: relative;
     top: 60px;
     background-image: url(../images/illustration_about_me.png);
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
     display: flex;
     flex-direction: column;
     align-items: center;
   }
 
-  .head img {
+  .head .decor {
     width: 70px;
     height: 130px;
     position: absolute;
     float: right;
     right: 0;
     top: -65px;
+    background-image: url(../images/Mask\ Group.png);
+    background-size: cover;
+    background-repeat: no-repeat;
   }
 
   .about_me h1 {
